<resources>
    <string name="app_name">Chuck Norris Facts App</string>
    <string name="title_activity_fact_detail">Chuck Norris Facts Details</string>

    <string name="btn_generate">Generate new fact</string>
    <string name="btn_favorite">Favorite</string>
    <string name="btn_share">Share this fact</string>

    <!-- side_navbar_menu -->
    <string name="side_nav_app_title">Chuck Norris Facts App</string>
    <string name="side_nav_email">marcio.fp.m2@gmail.com</string>
    <string name="side_nav_fav">Favorites facts</string>
    <string name="side_nav_gen">Generate new fact</string>
    <string name="side_nav_others">Others</string>
    <string name="side_nav_about">About</string>
    <string name="side_nav_feedback">Feedback</string>
    <string name="side_nav_github">Github</string>
    <string name="side_nav_quit">Quit</string>


    <!-- cards -->
    <string name="card_fav">Favorite</string>
    <string name="card_gen">Generate</string>


    <string name="msg_favorite_removed">Removed from favorites</string>
    <string name="msg_favorite_added">Added to favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_chuck_facts">@string/side_nav_app_title</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_share">Share</string>
</resources>
